-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.15.2, 6.0.1
-
f94b0e1dd999a6bb8dfa4471fd63c395fc8e2302 (qt/qtbase/dev) b275c5b1baa7df8704d1842ae0f1ff4ba99fb580 (qt/qtbase/6.1)
Rich text from HTML oddly stops background-color from being propagated to all child elements although all other properties seem to work fine.
For example with this only the first one has a background color set:
<div style="background-color:#f00;"><p>first</p><p>second</p></div>
For Gerrit Dashboard: QTBUG-91236 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
347068,3 | Allow background inheritance between non-body block elements | dev | qt/qtbase | Status: MERGED | +2 | 0 |
348339,2 | Allow background inheritance between non-body block elements | 6.1 | qt/qtbase | Status: MERGED | +2 | 0 |